Mejorando el index.hmtl

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git</title>
+    <title>Git y GitHub</title>
 </head>
 <body>
 
-    <h1>Hola Mundo</h1>
+    <div class="container">
+        <h2>Carlos Arturo</h2>
+    </div>
     
 </body>
 </html>
