--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+    <header>
+        <h1>Header</h1>
+    </header>
+
     <div class="container">
         <h2>Carlos Arturo</h2>
     </div>
