Agregando Parrago al index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <header>
         <h1>Experimento</h1>
+        <p>Haciendo Cambios en el Archivo</p>
     </header>
 
     <div class="container">
