--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git y GitHub</title>
+
+    <style>
+        body{
+            background: #f4f4f4;
+        }
+    </style>
 </head>
 <body>
 
